# LearningOpenGL

./: CMakeLists.txt  SlightlyOrganizedMain.cpp  main.cpp  shader.h
headers/Utility/: Utility.h
shaders/: vertex.glsl
sources/Utility/: Utility.cpp
